added timer feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="large-font">Coding Quiz</div>
-            <button class="start-button">Start</button>
+            <button class = "start-button">Start</button>
             <p> Try to answer the following coding questions within the time limit.
                 Try to get the highest possible score that you can get!
             </p>
@@ -28,7 +28,14 @@
 
         <main>
             <section>
+                <div class= "card timer">
 
+                    <div class = "timer-text">
+                      <div class="large-font timer-count">55</div>
+                      <h3>seconds remaining</h3>
+                    </div>
+                
+                </div>
             </section>
         </main>
 
