fixed styling and added questions variable

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </header>
 
         <main>
+            <!-- timer section -->
             <section>
                 <div class= "card timer">
 
@@ -37,6 +38,12 @@
                 
                 </div>
             </section>
+
+            <!-- quiz section -->
+            <section>
+                <div class="quiz"></div>
+            </section>
+            
         </main>
 
         <script src="script.js"></script>
