--- a/index.html
+++ b/index.html
@@ -41,9 +41,20 @@
 
             <!-- quiz section -->
             <section>
-                <div class="quiz"></div>
+                <div id="quiz">
+                    <h2 id="question"></h2>
+                    <div id="answers">
+                        <!-- create buttons for each answer -->
+                        <div class="flex-parent jc-center">
+                            <button type="button" id="option0"></button>
+                            <button type="button" id="option1"></button>
+                            <button type="button" id="option2"></button>
+                            <button type="button" id="option3"></button>
+                        </div>
+                    </div>
+                </div>
             </section>
-            
+
         </main>
 
         <script src="script.js"></script>
