--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="score-card">
+                    <h2 class="high-score-title">High Score</h2>
+                    <ol id="highScores"></ol>
+                </div>
             </section>
 
         </main>
