--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="score-card">
-                    <h2 class="high-score-title">High Score</h2>
+                    <h2 id="high-score-title">High Score</h2>
                     <ol id="highScores"></ol>
                 </div>
             </section>
